--- a/report/main.bib
+++ b/report/main.bib
@@ -168,3 +168,21 @@
   year={2004},
   publisher={Springer}
 }
+
+@incollection{lecun_1986,
+  title={Learning process in an asymmetric threshold network},
+  author={Le Cun, Yann},
+  booktitle={Disordered systems and biological organization},
+  pages={233--240},
+  year={1986},
+  publisher={Springer}
+}
+
+@article{naud_2018,
+  title={Sparse bursts optimize information transmission in a multiplexed neural code},
+  author={Naud, Richard and Sprekeler, Henning},
+  journal={Proceedings of the National Academy of Sciences},
+  pages={201720995},
+  year={2018},
+  publisher={National Acad Sciences}
+}
